--- a/Calculator/mainwindow.ui
+++ b/Calculator/mainwindow.ui
@@ -392,7 +392,7 @@
      <string>Del</string>
     </property>
    </widget>
-   <widget class="QLabel" name="labelOutput">
+   <widget class="QLabel" name="labelInput">
     <property name="geometry">
      <rect>
       <x>14</x>
