Using Operator in other classes. Also ensuring user enters valid expressions by preventing them, e.g., from entering 5 ++

--- a/Calculator/mainwindow.ui
+++ b/Calculator/mainwindow.ui
@@ -317,7 +317,7 @@
      </font>
     </property>
     <property name="text">
-     <string>x</string>
+     <string>×</string>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonDivide">
@@ -335,7 +335,7 @@
      </font>
     </property>
     <property name="text">
-     <string>/</string>
+     <string>÷</string>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonPercent">
