--- a/Calculator/mainwindow.ui
+++ b/Calculator/mainwindow.ui
@@ -230,24 +230,6 @@
      <string>9</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="buttonNegate">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>390</y>
-      <width>91</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>+/-</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="buttonEquals">
     <property name="geometry">
      <rect>
@@ -338,7 +320,7 @@
      <string>÷</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="buttonPercent">
+   <widget class="QPushButton" name="buttonRoot">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -353,7 +335,7 @@
      </font>
     </property>
     <property name="text">
-     <string>%</string>
+     <string>rt</string>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonSquared">
@@ -420,6 +402,24 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonNegate">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>390</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>±</string>
     </property>
    </widget>
   </widget>
