--- a/Calculator/mainwindow.ui
+++ b/Calculator/mainwindow.ui
@@ -6,26 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>410</width>
-    <height>453</height>
+    <width>512</width>
+    <height>436</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>410</width>
-    <height>453</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>410</width>
-    <height>453</height>
+    <width>1000</width>
+    <height>1000</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -35,8 +35,8 @@
    <widget class="QPushButton" name="button0">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>390</y>
+      <x>210</x>
+      <y>370</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -49,12 +49,15 @@
     <property name="text">
      <string>0</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>330</y>
+      <x>210</x>
+      <y>310</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -67,12 +70,15 @@
     <property name="text">
      <string>2</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button1">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>330</y>
+      <x>110</x>
+      <y>310</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -85,12 +91,15 @@
     <property name="text">
      <string>1</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button3">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>330</y>
+      <x>310</x>
+      <y>310</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -103,12 +112,15 @@
     <property name="text">
      <string>3</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonDecimalPoint">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>390</y>
+      <x>310</x>
+      <y>370</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -121,12 +133,15 @@
     <property name="text">
      <string>.</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button4">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>270</y>
+      <x>110</x>
+      <y>250</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -139,12 +154,15 @@
     <property name="text">
      <string>4</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button5">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>270</y>
+      <x>210</x>
+      <y>250</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -157,12 +175,15 @@
     <property name="text">
      <string>5</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button6">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>270</y>
+      <x>310</x>
+      <y>250</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -175,12 +196,15 @@
     <property name="text">
      <string>6</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button7">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>210</y>
+      <x>110</x>
+      <y>190</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -193,12 +217,15 @@
     <property name="text">
      <string>7</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button8">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>210</y>
+      <x>210</x>
+      <y>190</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -211,12 +238,15 @@
     <property name="text">
      <string>8</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="button9">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>210</y>
+      <x>310</x>
+      <y>190</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -229,12 +259,15 @@
     <property name="text">
      <string>9</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonEquals">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>390</y>
+      <x>410</x>
+      <y>370</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -247,12 +280,15 @@
     <property name="text">
      <string>=</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonPlus">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>330</y>
+      <x>410</x>
+      <y>310</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -265,12 +301,15 @@
     <property name="text">
      <string>+</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonMinus">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>270</y>
+      <x>410</x>
+      <y>250</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -283,12 +322,15 @@
     <property name="text">
      <string>–</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonTimes">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>210</y>
+      <x>410</x>
+      <y>190</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -301,12 +343,15 @@
     <property name="text">
      <string>×</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonDivide">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>150</y>
+      <x>410</x>
+      <y>130</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -319,12 +364,15 @@
     <property name="text">
      <string>÷</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonRoot">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>150</y>
+      <y>130</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -337,12 +385,15 @@
     <property name="text">
      <string>rt</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonSquared">
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>150</y>
+      <y>130</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -355,12 +406,15 @@
     <property name="text">
      <string>^</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="buttonClear">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>150</y>
+      <x>310</x>
+      <y>130</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -371,16 +425,19 @@
      </font>
     </property>
     <property name="text">
-     <string>C</string>
+     <string>Clear</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QLabel" name="labelInput">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>70</y>
-      <width>381</width>
-      <height>41</height>
+      <x>10</x>
+      <y>40</y>
+      <width>491</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -408,7 +465,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>390</y>
+      <y>310</y>
       <width>91</width>
       <height>51</height>
      </rect>
@@ -421,10 +478,121 @@
     <property name="text">
      <string>±</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
+   </widget>
+   <widget class="QPushButton" name="buttonOpenParenth">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>370</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>(</string>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
+   </widget>
+   <widget class="QPushButton" name="buttonCloseParenth">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>370</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>)</string>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
+   </widget>
+   <widget class="QPushButton" name="buttonXSquared">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>250</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>x^2</string>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
+   </widget>
+   <widget class="QPushButton" name="buttonSqrt">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>190</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>√</string>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
+   </widget>
+   <widget class="QPushButton" name="buttonBack">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>130</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
